--- a/.github/workflows/build_wasm.yml
+++ b/.github/workflows/build_wasm.yml
@@ -18,7 +18,12 @@ jobs:
         with:
           toolchain: stable
           override: true
-          targets: wasm32-unknown-unknown
+          target: wasm32-unknown-unknown
+
+      - name: Run cargo check
+        uses: actions-rs/cargo@v1
+        with:
+          command: check
 
       - name: Build WASM
         run: |
