--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.5.0"
 description = "Low-complexity, lossy audio codec designed for embedded devices"
 homepage = "https://github.com/Daninet/sea-codec"
 repository = "https://github.com/Daninet/sea-codec"
-keywords = ["audio", "codec", "encoder", "decoder", "embedded", "low-complexity"]
+keywords = ["audio", "codec", "encoder", "decoder", "embedded"]
 categories = ["multimedia::audio", "multimedia::encoding"]
 readme = "README.md"
 edition = "2021"
