--- a/.github/workflows/build_cli.yml
+++ b/.github/workflows/build_cli.yml
@@ -37,12 +37,12 @@ jobs:
       - name: Build binary
         uses: houseabsolute/actions-rust-cross@v1
         with:
-          command: ${{ matrix.platform.command }}
+          command: build
           target: ${{ matrix.platform.target }}
-          args: "--locked --release"
+          args: "--example=seaconv --locked --release"
           strip: true
       - name: Publish artifacts and release
         uses: houseabsolute/actions-rust-release@v0
         with:
-          executable-name: ubi
+          executable-name: seaconv
           target: ${{ matrix.platform.target }}
