No changes file

--- a/.github/workflows/build_cli.yml
+++ b/.github/workflows/build_cli.yml
@@ -45,4 +45,5 @@ jobs:
         uses: houseabsolute/actions-rust-release@v0
         with:
           executable-name: seaconv
+          changes-file: ""
           target: ${{ matrix.platform.target }}
